...
    
    func proceedToNextQuestionOrResults() {
        if isLastQuestion() {
            let text = "Вы ответили на \(correctAnswers) из 10, попробуйте ещё раз!"
            
            let lastQuestion = QuizResultsViewModel(
                title: "Раунд окончен",
                text: text,
                buttonText: "Сыграть еще раз")
            viewController?.show(quiz: lastQuestion)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
